<resources>
    <string name="app_name">Go4Lunch</string>

    <string name="facebook_application_id">296011911276762</string>
    <string name="fb_login_protocol_scheme">fb296011911276762</string>

    <string name="twitter_consumer_key" translatable="false">HjLEIjzRqj9pBxVoZYFNynNCk </string>
    <string name="twitter_consumer_secret" translatable="false">LizeQC7C8Gqiaw4V0dGTABPaFx5zWpGg4aGc22aQZokPH3eT4f </string>

    <string name="auth_failed">Authentification failed, please try again</string>
    <string name="network_access">Network Access is necessary to sign in</string>
    <string name="unknown_error">There is an unknown error</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="map_view">Map View</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="workmates">Workmates</string>
    <string name="search">Search</string>
    <string name="hungry">I\'m Hungry</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="user_s_profile_s_photo">User\'s profile\'s photo</string>
    <string name="user_s_mail">User\'s mail</string>
    <string name="user_s_name">User\'s name</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notif">Enable message notification</string>
    <string name="notif_summary">Allow Go4Lunch to send you a notification at 12:00 AM when you chose a restaurant for lunch</string>
    <string name="user_account">User Account</string>
    <string name="setting">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_delete">Are you sure that you want delete your account ?</string>
    <string name="yes_sure">Yes, I\'m sure</string>
    <string name="cancel">Cancel</string>
    <string name="account_deleted">Your account is successfully deleted</string>
    <string name="re_auth_to_delete">You need to re-authenticate one more time to delete your account.</string>
    <string name="available_workmates">Available workmates</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="without_location">Without the location permissions, we can\'t locate your position and restaurants around you.</string>
    <string name="why_location">Why we need location permissions?</string>
    <string name="restaurant_opening_hour">restaurant_opening_hour</string>
    <string name="restaurant_address">restaurant_address</string>
    <string name="dist">dist</string>
    <string name="restaurant_name">restaurant_name</string>
    <string name="rating_star_value">rating star value</string>
    <string name="a_photo_of_the_restaurant">A photo of the restaurant</string>
    <string name="no_info_hours">There is no information about the opening hours</string>
    <string name="closing_soon">Closing soon</string>
    <string name="open_until">Open until</string>
    <string name="closed">Closed</string>
    <string name="meters">%1$d m</string>
    <string name="address">address</string>
    <string name="name">name</string>
    <string name="call_icon">call icon</string>
    <string name="like_star">like star</string>
    <string name="web_icon">web icon</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="no_chosen_resto">You haven\'t yet choose a restaurant today</string>
    <string name="you_like">You have liked %1$s</string>
    <string name="users_icon">Users icon</string>
    <string name="user_number">(%1$d)</string>
    <string name="a_photo_of_the_user">a photo of the user</string>
    <string name="chose">%1$s chose %2$s</string>
    <string name="no_decided">%1$s has not decided yet</string>
    <string name="default_profil_phot_url">https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png</string>
    <string name="is_joining">%1$s is joining</string>
    <string name="delete_logout">Delete account and log out</string>
    <string name="here_to_delete">Click here if you want delete your Go4Lunch account</string>
    <string name="already_like">You\'ve already liked %1$s</string>
    <string name="you">You</string>
    <string name="notif_pref">notification</string>
    <string name="you_notif">You,</string>
    <string name="time_lunch">It\'s time to lunch</string>
    <string name="lunch_at">Don\'t forget, you chose to lunch at %1$s</string>
    <string name="is_located">%1$s is located at :</string>
    <string name="you_lunch_with">You can lunch with :</string>
    <string name="recall">Just a little recall</string>
    <string name="search_a_restaurant">Search a restaurant</string>
    <string name="clear_text_button">Clear text button</string>

</resources>
