<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_map"
        android:enabled="true"
        android:title="@string/map_view"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_24dp"/>

    <item
        android:id="@+id/bottom_restaurant"
        android:enabled="true"
        android:title="@string/restaurant_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_restaurant2_24dp"/>

    <item
        android:id="@+id/bottom_workmates"
        android:enabled="true"
        android:title="@string/workmates"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_people_24dp"/>

</menu>