<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/restaurant_item_img_view"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/a_photo_of_the_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_item_name_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_item_adr_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_address"
        android:textColor="@color/greyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_item_name_txt_view" />

    <TextView
        android:id="@+id/restaurant_item_hour_txt_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/restaurant_opening_hour"
        android:textColor="@color/greyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_item_third_star_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_item_adr_txt_view" />

    <TextView
        android:id="@+id/restaurant_item_distance_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dist"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_item_img_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restaurant_item_first_star_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/rating_star_value"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_item_img_view"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_item_img_view"/>

    <ImageView
        android:id="@+id/restaurant_item_second_star_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/rating_star_value"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_item_img_view"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_item_first_star_img" />

    <ImageView
        android:id="@+id/restaurant_item_third_star_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/rating_star_value"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_item_img_view"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_item_second_star_img"/>

    <TextView
        android:id="@+id/restaurant_item_nb_user_txt"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_person_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_item_img_view"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_item_img_view"
        app:layout_constraintTop_toTopOf="@+id/restaurant_item_img_view" />

</androidx.constraintlayout.widget.ConstraintLayout>