<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.RestaurantActivity">

    <ImageView
        android:id="@+id/activity_restaurant_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/a_photo_of_the_restaurant"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/activity_restaurant_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_restaurant_address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/address"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_name_txt" />

        <ImageView
            android:id="@+id/activity_restaurant_rating_star3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/rating_star_value"
            app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_name_txt"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_name_txt"
            app:layout_constraintTop_toTopOf="@+id/activity_restaurant_name_txt" />

        <ImageView
            android:id="@+id/activity_restaurant_rating_star2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/rating_star_value"
            app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_name_txt"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_rating_star3"
            app:layout_constraintTop_toTopOf="@+id/activity_restaurant_name_txt"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/activity_restaurant_rating_star"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/rating_star_value"
            app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_name_txt"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_rating_star2"
            app:layout_constraintTop_toTopOf="@+id/activity_restaurant_name_txt"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_restaurant_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_restaurant2_24dp"
        app:backgroundTint="@android:color/white"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:maxImageSize="35dp"
        app:rippleColor="@color/colorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/activity_restaurant_call_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/call_icon"
            android:src="@drawable/ic_call_24dp"
            app:layout_constraintEnd_toStartOf="@+id/activity_restaurant_like_img"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/activity_restaurant_like_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/like_star"
            android:src="@drawable/ic_star_like_24dp"
            app:layout_constraintEnd_toStartOf="@+id/activity_restaurant_web_img"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_call_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/activity_restaurant_web_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/web_icon"
            android:src="@drawable/ic_language_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_like_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_restaurant_call_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/call"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_call_img"
            app:layout_constraintStart_toStartOf="@+id/activity_restaurant_call_img"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_call_img" />

        <TextView
            android:id="@+id/activity_restaurant_like_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/like"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_like_img"
            app:layout_constraintStart_toStartOf="@+id/activity_restaurant_like_img"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_like_img" />

        <TextView
            android:id="@+id/activity_restaurant_web_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/website"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/activity_restaurant_web_img"
            app:layout_constraintStart_toStartOf="@+id/activity_restaurant_web_img"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_web_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/activity_restaurant_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>